# CLinter

./: .gitignore  CMakeLists.txt  Parsing.txt  README.md  default.lconf  makefile  myConfig.lconf  sample.c  test.sh
Doc/: Doxyfile
Doc/html/: README_8md.html  annotated.html  changeType_8c.html  changeType_8c__incl.md5  changeType_8h.html  changeType_8h__dep__incl.md5  changeType_8h__incl.md5  changeType_8h_source.html  checkCoding_8c.html  checkCoding_8c__incl.md5  checkCoding_8h.html  checkCoding_8h__dep__incl.md5  checkCoding_8h__incl.md5  checkCoding_8h_source.html  checkVarFunc_8c.html  checkVarFunc_8c__incl.md5  checkVarFunc_8h.html  checkVarFunc_8h__dep__incl.md5  checkVarFunc_8h__incl.md5  checkVarFunc_8h_source.html  checker_8c.html  checker_8c__incl.md5  checker_8h.html  checker_8h__dep__incl.md5  checker_8h__incl.md5  checker_8h_source.html  classes.html  config_8c.html  config_8c__incl.md5  config_8h.html  config_8h__dep__incl.md5  config_8h__incl.md5  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files_8c.html  files_8c__incl.md5  files_8h.html  files_8h__dep__incl.md5  files_8h__incl.md5  (+52 more)
Doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+38 more)
Doc/latex/: README_8md.tex  annotated.tex  changeType_8c.tex  changeType_8c__incl.md5  changeType_8h.tex  changeType_8h__dep__incl.md5  changeType_8h__incl.md5  checkCoding_8c.tex  checkCoding_8c__incl.md5  checkCoding_8h.tex  checkCoding_8h__dep__incl.md5  checkCoding_8h__incl.md5  checkVarFunc_8c.tex  checkVarFunc_8c__incl.md5  checkVarFunc_8h.tex  checkVarFunc_8h__dep__incl.md5  checkVarFunc_8h__incl.md5  checker_8c.tex  checker_8c__incl.md5  checker_8h.tex  checker_8h__dep__incl.md5  checker_8h__incl.md5  config_8c.tex  config_8c__incl.md5  config_8h.tex  config_8h__dep__incl.md5  config_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  files_8c.tex  files_8c__incl.md5  files_8h.tex  files_8h__dep__incl.md5  files_8h__incl.md5  freeAll_8c.tex  freeAll_8c__incl.md5  freeAll_8h.tex  freeAll_8h__dep__incl.md5  freeAll_8h__incl.md5  headers_8h.tex  (+28 more)
config/: default.lconf
src/: ast.c  ast.h  changeType.c  changeType.h  checkCoding.c  checkCoding.h  checkEOL.c  checkEOL.h  checkVarFunc.c  checkVarFunc.h  checker.c  checker.h  config.c  config.h  debug.c  debug.h  files.c  files.h  freeAll.c  freeAll.h  headers.h  listFiles.c  listFiles.h  main.c  parser.c  parser.h  token.c  token.h  tool.c  tool.h
src/config/: config.c  config.h
src/file/: files.c  files.h  listFiles.c  listFiles.h
src/parse/: changeType.c  changeType.h  parser.c  parser.h  token.c  token.h
src/rules/: checkArrayBracketEol.c  checkArrayBracketEol.h  checkCoding.c  checkCoding.h  checkCommaSpacing.c  checkCommaSpacing.h  checkCommentsHeader.c  checkCommentsHeader.h  checkMaxLineNumbers.c  checkMaxLineNumbers.h  checkNoMultiDeclaration.c  checkNoMultiDeclaration.h  checkNoTrailingSpaces.c  checkNoTrailingSpaces.h  checkOperatorsSpacing.c  checkOperatorsSpacing.h  checkUnusedFunction.c  checkUnusedFunction.h  checkUnusedVariable.c  checkUnusedVariable.h  checkVarFunc.c  checkVarFunc.h  checker.c  checker.h
src/tools/: collector.c  collector.h  debug.c  debug.h  freeAll.c  freeAll.h  linterMemory.c  linterMemory.h  stack.c  stack.h  tool.c  tool.h
test/: assign1.c  assign2.c  assign3.c  assign4.c  assign5.c  assign6.c  assign7.c  assign8.c  assign9.c  default.lconf  increment.c  linter  myConfig.lconf  sample.c
test/bad/: array-bracket-col.c  comments-header.c  default.lconf  max-file-line-numbers.c  max-line-numbers.c  myConfig.lconf  no-multi-declaration.c  operator-spacing.c  undeclared-function.c  undeclared-variable.c  unused-function.c  unused-variable.c
test/bash/: test.sh
test/good/: array-bracket-col.c  comments-header.c  default.lconf  myConfig.lconf
